--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.13",
+    "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.7",
-    "@types/react": "16.8.19",
+    "@types/normalizr": "^2.0.18",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/redux": "^3.6.0",
+    "@types/reselect": "^2.2.0",
+    "formik": "^1.5.7",
+    "material-ui": "^0.20.2",
+    "normalize.css": "^8.0.1",
+    "normalizr": "^3.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "3.5.1"
   },
   "scripts": {
@@ -32,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "node-sass": "^4.12.0"
   }
 }
