--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@types/react-redux": "^7.0.9",
     "@types/redux": "^3.6.0",
     "@types/reselect": "^2.2.0",
+    "axios": "^0.19.0",
     "formik": "^1.5.7",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.4.0",
+    "path-to-regex": "^1.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
