--- a/package.json
+++ b/package.json
@@ -49,9 +49,23 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "node-sass": "^4.12.0"
+    "husky": "^2.4.0",
+    "lint-staged": "^8.2.0",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2"
   }
 }
