--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@types/classnames": "^2.2.8",
+    "@types/enzyme": "^3.9.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "24.0.13",
+    "@types/lodash": "^4.14.134",
     "@types/material-ui": "^0.21.6",
     "@types/node": "12.0.7",
     "@types/normalizr": "^2.0.18",
+    "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.8.19",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.0.9",
+    "@types/react-router": "^5.0.1",
+    "@types/react-router-dom": "^4.3.3",
     "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.1",
     "@types/reselect": "^2.2.0",
+    "@types/uuid": "^3.4.4",
+    "@types/yup": "^0.26.16",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "firebase": "^6.1.1",
     "formik": "^1.5.7",
+    "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "normalize.css": "^8.0.1",
     "normalizr": "^3.4.0",
@@ -22,11 +38,16 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "3.5.1"
+    "typescript": "3.5.1",
+    "uuid": "^3.3.2",
+    "yap": "^0.0.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
